--- a/TP_final_RestoControl.cbp
+++ b/TP_final_RestoControl.cbp
@@ -32,8 +32,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="clientes.h" />
+		<Unit filename="detalle.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="productos.h" />
 		<Unit filename="rep.h" />
+		<Unit filename="ventas.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
