--- a/TP_final_RestoControl.cbp
+++ b/TP_final_RestoControl.cbp
@@ -34,6 +34,7 @@
 		</Compiler>
 		<Unit filename="clientes.h" />
 		<Unit filename="detalle.h" />
+		<Unit filename="globales.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="productos.h" />
 		<Unit filename="rep.h" />
@@ -41,9 +42,6 @@
 		<Unit filename="ventas.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
-			<code_completion />
-			<envvars />
-			<debugger />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
