--- a/TP_final_RestoControl.cbp
+++ b/TP_final_RestoControl.cbp
@@ -33,6 +33,7 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="clientes.h" />
+		<Unit filename="configuracion.h" />
 		<Unit filename="detalle.h" />
 		<Unit filename="globales.h" />
 		<Unit filename="main.cpp" />
@@ -42,6 +43,9 @@
 		<Unit filename="ventas.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
+			<code_completion />
+			<envvars />
+			<debugger />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
