--- a/TP_final_RestoControl.cbp
+++ b/TP_final_RestoControl.cbp
@@ -39,13 +39,11 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="productos.h" />
 		<Unit filename="rep.h" />
+		<Unit filename="rlutil.h" />
 		<Unit filename="submenues.h" />
 		<Unit filename="ventas.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
-			<code_completion />
-			<envvars />
-			<debugger />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
